Remove redundant values, fix whitespaces

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -9,7 +9,7 @@
 
 .btn {
     display: inline-block;
-    padding: 4px 15px;
+    padding: 4px 9px;
     margin-bottom: 0;
     font-family: var(--gs-font-family);
     font-size: 14px;
@@ -26,7 +26,6 @@
     border-bottom-color: rgb(179, 179, 179);
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-    white-space: nowrap;
 }
 
 .btn + .btn {
@@ -53,26 +52,25 @@
 .btnPrimary {
     color: rgb(255, 255, 255);
     text-shadow: none;
-    background: rgba(34,129,241,1);
-    box-shadow: inset 0px -1px 0px rgba(13,81,162,1);
+    background: rgba(34, 129, 241, 1);
+    box-shadow: inset 0px -1px 0px rgba(13, 81, 162, 1);
     border-radius: 4px;
     border-color: transparent;
 }
 
-
 .btnPrimary:hover:not([disabled]),
 .btnPrimary:focus {
-    background: linear-gradient(360deg, rgba(34,129,241,1) 0%, rgba(7,158,242,1) 100%);
-    box-shadow: 0px 2px 6px rgba(34, 129, 241, 0.8), inset 0px -1px 0px rgba(13,82,162,1);
+    background: linear-gradient(rgba(7, 158, 242, 1), rgba(34, 129, 241, 1));
+    box-shadow: 0px 2px 6px rgba(34, 129, 241, 0.8), inset 0px -1px 0px rgba(13, 82, 162, 1);
 }
 
 .btnPrimary:active.btnPrimary:active {
-    background: linear-gradient(180deg, rgba(34,129,241,1) 0%, rgba(7,158,242,1) 100%);
-    box-shadow: inset 0px 1px 4px rgba(15,93,139,1);
+    background: linear-gradient(rgba(34, 129, 241, 1), rgba(7, 158, 242, 1));
+    box-shadow: inset 0px 1px 4px rgba(15, 93, 139, 1);
 }
 
 .btnPrimary[disabled] {
-    background: rgba(34,129,241,1);
+    background: rgba(34, 129, 241, 1);
     opacity: 0.7;
 }
 
